--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,7 @@
 
 name: Docker image sync to tencent
 env:
-  REGISTRY_URL: "ccr.ccs.tencentyun.com/devopsvip"
+  REGISTRY_URL: "registry.cn-hangzhou.aliyuncs.com/fanglei"
 on:
   push:
     paths:
@@ -18,7 +18,7 @@ jobs:
     - name: Run Push Docker images
       run: |
         mkdir -p images/ 
-        python uploader.py ${{ secrets.TENCENTDOCKER_USER}} ${{ secrets.TENCENTDOCKER_PASSWD}} ${REGISTRY_URL}
+        python uploader.py ${{ secrets.ALIYUNDOCKER_USER}} ${{ secrets.ALIYUNDOCKER_PASSWD}} ${REGISTRY_URL}
     - uses: actions/upload-artifact@v2
       with: 
         name: docker-image
